# ur_ros_driver_test

./: .gitignore
install/: local_setup.sh  setup.sh
install/ur_script_sender_py/lib/ur_script_sender_py/: send_script
install/ur_script_sender_py/share/ur_script_sender_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/ur_script_sender_cpp/: CMakeLists.txt  package.xml
src/ur_script_sender_cpp/paths/: demo_joint_path.yaml
src/ur_script_sender_cpp/src/: send_script.cpp  send_traj_action.cpp
src/ur_script_sender_py/: package.xml  setup.cfg  setup.py
src/ur_script_sender_py/paths/: demo_joint_path.yaml
src/ur_script_sender_py/ur_script_sender_py/: send_script.py  send_traj_action.py
